fixed gap between header and calendar body
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk/click@777241 13f79535-47bb-0310-9956-ffa450edef68

--- a/extras/src/META-INF/web/click/calendar/silver.css
+++ b/extras/src/META-INF/web/click/calendar/silver.css
@@ -61,6 +61,8 @@ iframe.ie6_blocker {
   background-color: #ccc;
   border-bottom: 2px solid #aaa;
   text-align:center;
+  padding-top: 1px;
+  height:19px;
 }
 
 .calendar_date_select .cds_header span {
